--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-adk>=1.12.0",
+    "pymongo>=4.14.1",
     "python-dotenv>=1.1.1",
     "wikipedia-api>=0.8.1",
 ]
