--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,124 @@
+# Environment and Secret Files
 .env
-.venv
+.env.local
+.env.*.local
+*.key
+*.pem
+*.p12
+*.pfx
+config.json
+secrets.json
+
+# Python
+.venv/
+venv/
+env/
+ENV/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# Operating System
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Temporary and Generated Files
+temp/
+tmp/
+*.tmp
+*.temp
+*.log
+*.out
+*.pid
+.cache/
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# MongoDB dumps
+dump/
+*.bson
+
+# Memory files (project-specific - contains sensitive session data)
+.memory/
+
+# ADK specific
+.adk/
+adk_logs/
+
+# Node.js (if any frontend components)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Lock files (keep uv.lock but ignore others)
+package-lock.json
+yarn.lock
+poetry.lock
+Pipfile.lock
+
+# Documentation builds
+docs/_build/
+site/
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Editor swap files
+*.swp
+*.swo
+*~
+
+# Generated Wikipedia content (temporary files)
+wikipedia_*.md
+wikipedia_*.html
+
+# API response caches
+*.cache
+cache/
+
+# Test coverage
+.coverage
+.nyc_output
+coverage/
